--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"nodemon": "^2.0.15"
 	},
 	"dependencies": {
+		"@babel/runtime": "^7.17.2",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"express-handlebars": "^6.0.3",
