--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "task-crud-node-mongo",
+	"name": "store-crud-node-mongo",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
